# creatura

./: Cargo.toml  LICENSE  README.md  TODO.md  env
src/: bfs.rs  body.rs  cdfs.rs  dfs.rs  dsp.rs  graph.rs  lib.rs  main.rs  math.rs  measurement.rs  operator.rs  rdfs.rs  repeat_visit_map.rs  stamp.rs
src/brain/: genotype.rs  lessin.rs  mod.rs
src/operator/: graph.rs
