[package]
name = "muscley-wusaley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dsp = ["dep:bevy_fundsp"]

[dependencies]
bevy = "0.14"
bevy_fundsp = { version = "0.6.0", path = "../bevy_fundsp", optional = true }
bevy_panorbit_camera = "0.19.0"
# bevy_toon_shader = "0.3.0"
avian3d = "0.1"
nalgebra = "0.32"
parry3d = "0.15"
petgraph = "0.6.4"
rand = "0.8.5"

[[bin]]
name = "main"
doc = false
