[package]
name = "creatura"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dsp = ["dep:bevy_fundsp"]

[dependencies]
bevy = "0.14"
bevy_fundsp = { version = "0.4.0", optional = true }
bevy_panorbit_camera = "0.19.0"
# bevy_toon_shader = "0.3.0"
avian3d = { git = "https://github.com/Jondolf/avian", version = "0.1.2" }
nalgebra = "0.32"
parry3d = "0.15"
petgraph = "0.6.5"
rand = "0.8.5"
avian_pickup = { git = "https://github.com/janhohenheim/avian_pickup", version = "0.1.0" }
# avian_interpolation3d = { git = "https://github.com/janhohenheim/avian_interpolation", version = "0.1.0" }

[[bin]]
name = "main"
doc = false

[patch.crates-io]
petgraph = { path = '../petgraph' }
# avian3d = { path = '../avian/crates/avian3d' }
# parry3d = { path = '../parry/crates/parry3d' }
