[package]
name = "creatura"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dsp = ["dep:bevy_fundsp"]
pickup = ["dep:avian_pickup"]
avian = ["dep:avian3d"]
rapier = ["dep:bevy_rapier3d"]

[dependencies]
bevy = "0.14"
bevy_fundsp = { version = "0.4.0", optional = true }
bevy_panorbit_camera = "0.19.0"
# bevy_toon_shader = "0.3.0"
# avian3d = { git = "https://github.com/Jondolf/avian", version = "0.1.2" }
avian3d = { version = "0.1.2", optional = true }
parry3d = "0.15"
petgraph = { version = "0.6.5", features = ["serde-1"] }
rand = "0.8.5"
avian_pickup = { git = "https://github.com/janhohenheim/avian_pickup", version = "0.1.0", optional = true }
rand_distr = "0.4.3"
weighted_rand = "0.4.2"
eviolite = "0.1.1"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
bevy_rapier3d = { version = "0.27.0", optional = true, features = [ "simd-stable", "debug-render-3d" ]}
# avian_interpolation3d = { git = "https://github.com/janhohenheim/avian_interpolation", version = "0.1.0" }


[[bin]]
name = "main"
doc = false

[patch.crates-io]
petgraph = { path = '../petgraph' }
avian3d = { path = '../avian/crates/avian3d' }
# parry3d = { path = '../parry/crates/parry3d' }
